--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 :root {
     --primary: #000;
-    --background: #fff;
+    --background: #efefbb;
 }
 
 * {
@@ -10,13 +10,66 @@
 }
 
 body {
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Lato',sans-serif;
     background-color: var(--background);
+    background: linear-gradient(to right, #d4d3dd, #efefbb);
     color: var(--primary);
-    height: 100vh;
-    overflow: hidden;
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+h1 {
+    letter-spacing: 3px;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+.pokemon {
+    background-color: #eee;
+    border-radius: 10px;
+    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    width: 175px;
+}
+
+.pokemon .img-container {
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    text-align: center;
+}
+
+.pokemon .img-container img {
+    max-width: 90%;
+    margin-top: 20px;
+}
+
+.pokemon .info {
+    margin-top: 20px;
+}
+
+.pokemon .info .number {
+    background-color: rgba(0,0,0,0.1);
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 0.8rem;
+}
+
+.pokemone .info .name {
+    margin: 15px 0 7px;
+    letter-spacing: 1px;
+    
 }
